# pollovink

./: .gitignore  README.md  manage.py  pyproject.toml
pollovnik/: asgi.py  settings.py  urls.py  wsgi.py
polls/: admin.py  models.py  urls.py  views.py
polls/migrations/: 0001_initial.py
